syntax = "proto3";

package ports.api;
option go_package = "github.com/Ozoniuss/golang-microservices-demo/protobuf/ports/api";

import "ports/model/port.proto";
import "google/rpc/status.proto";

service Ports {
    rpc StreamPorts(stream StreamPortsRequest) returns (StreamPortsResponse) {}
}

message StreamPortsRequest{
   oneof message {
      PortList data = 1;
      google.rpc.Status error = 2;
   }
}

//GetPortResponse defines the response for a getPort call
message StreamPortsResponse{
}

message PortList {
   repeated ports.model.Port ports = 1;
}
